# ha-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ha_mcp/: client.py  config.py  server.py
src/ha_mcp/tools/: __init__.py  automations.py  history.py  scripts.py  states.py  system.py
