[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-mcp-server"
version = "0.1.0"
description = "MCP server for Home Assistant configuration management and data analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic-settings>=2.5.0",
]

[project.scripts]
ha-mcp-server = "ha_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ha_mcp"]
